lessons/01-flask/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: localhost
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-service
          servicePort: 3000
